--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
+.react-datepicker__input-container {
+  width: inherit;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
